--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -12,6 +12,7 @@
 
   <script src="https://cdn.firebase.com/js/client/1.0.21/firebase.js"></script>
   <script src="https://cdn.firebase.com/libs/angularfire/0.8.2/angularfire.min.js"></script>
+  <script src="https://cdn.firebase.com/libs/angularfire/0.9.0/angularfire.min.js"></script>
 
 
   <script src="js/app.js"></script>
