--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -16,6 +16,7 @@
 
 
   <script src="js/app.js"></script>
+  <script src='./dist/hello.all.js'></script>
   <script src="js/controllers/registration.js"></script>
   <script src="js/controllers/meetings.js"></script>
 </head>
