Added the Date and Time Controller to the Model and so it can display the last time/date the comment was updated. Also fixed a little more CSS cause I'm OCD like that :)

--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="goldenstrawberries">
 <head>
   <meta charset="UTF-8">
-  <title>The Iron Yard Start Up Group</title>
+  <title>The Iron Yard Commenting App</title>
   <meta name="viewport" content="width=device-width, user-scalable=no">
   <link rel="stylesheet" href="css/style.css">
 
