--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="goldenstrawberries">
 <head>
   <meta charset="UTF-8">
-  <title>The Iron Yard Commenting App</title>
+  <title>Commenting App</title>
   <meta name="viewport" content="width=device-width, user-scalable=no">
   <link rel="stylesheet" href="css/style.css">
 
@@ -12,19 +12,26 @@
 
   <script src="https://cdn.firebase.com/js/client/1.0.21/firebase.js"></script>
   <script src="https://cdn.firebase.com/libs/angularfire/0.8.2/angularfire.min.js"></script>
-  <script src="https://cdn.firebase.com/libs/angularfire/0.9.0/angularfire.min.js"></script>
-
+  <script src="https://cdn.firebase.com/js/simple-login/1.6.2/firebase-simple-login.js"></script>
 
   <script src="js/app.js"></script>
-  <script src='./dist/hello.all.js'></script>
+  <script src="js/services/authentication.js"></script>
+  <script src="js/controllers/status.js"></script>
   <script src="js/controllers/registration.js"></script>
   <script src="js/controllers/meetings.js"></script>
+  <script src="js/controllers/checkins.js"></script>
 </head>
 <body>
 <header>
-  <nav class="cf" ng-include="'views/nav.html'"></nav>
+  <nav class="cf" ng-include="'views/nav.html'"
+    ng-controller="StatusController"></nav>
 </header>
 <div class="page">
+  <div class="userinfo" 
+    ng-controller="StatusController" ng-show="currentUser">
+    <span class="user">Hi {{ currentUser.firstname }}</span>
+    <a href="#" ng-click="logout()">logout</a>
+  </div>
   <main class="cf" ng-view></main>
 </div>
 </body>
